<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:hint="Name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="16dp"
                    android:text="@string/toppings_label"
                    style="@style/HeaderTextStyle"/>

                <CheckBox
                    android:id="@+id/cream_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="changeCreamPref"
                    android:paddingLeft="24dp"
                    android:text="Whipped Cream"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/chocolate_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="changeChocolatePref"
                    android:paddingLeft="24dp"
                    android:text="Chocolate"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="16dp"
                    android:text="@string/quantity_label"
                    style="@style/HeaderTextStyle"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/button_purple"
                        android:onClick="decrement"
                        android:text="@string/decrement_button"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColor="#ffffff" />

                    <TextView
                        android:id="@+id/quantity_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="16dp"
                        android:paddingLeft="8sp"
                        android:paddingRight="8sp"
                        android:text="0"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <Button
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/button_purple"
                        android:onClick="increment"
                        android:text="@string/increment_button"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColor="#ffffff" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/price_label"
            style="@style/HeaderTextStyle"/>


        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="16dp"
            android:text="0"
            android:textColor="#000000"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_purple"
                android:onClick="submitOrder"
                android:text="@string/order_button"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#ffffff"
                android:layout_marginLeft="60dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_purple"
                android:onClick="emailOrder"
                android:text="@string/email_button"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#ffffff"
                android:layout_marginLeft="0dp"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
